crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__my_day_with_its_suggestions.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · My Day · Thu 24 Sep                                                                 ● synced "
"╭ Lists ───────────────╮╭ My Day · Thu 24 Sep ──────────────────────── 3/5 ╮╭ Detail ────────────────────────╮"
"│☼ My Day             1││  Today                                           ││Title      Renew passport       │"
"│» Next                ││○ Call the bank                                   ││                                │"
"│★ Important          1││✓ Pay the plumber                                 ││Status     open                 │"
"│▦ Planned            2││  Suggestions                                     ││List       Home                 │"
"│∞ All                3││○ Renew passport                   Today          ││Due        Thu 24 Sep 2026      │"
"│◔ Assigned            ││○ File expenses                   Sun 20          ││(Today)                         │"
"│⧖ Upcoming            ││○ Book dentist                                    ││Start      none                 │"
"│… Someday             ││                                                  ││Reminder   none                 │"
"│✓ Completed          1││                                                  ││Importance normal               │"
"│≡ Tasks               ││                                                  ││Assignee   none                 │"
"│≡ Home               3││                                                  ││Defer      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
