crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__no_color_is_monochrome.snap
---
source: crates/tui/src/ui/tests.rs
expression: screen
---
Buffer {
    area: Rect { x: 0, y: 0, width: 110, height: 16 },
    content: [
        " ms-todo 9.9.9 · Home                                                                                ● synced ",
        "╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 1/4 ╮╭ Detail ────────────────────────╮",
        "│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │",
        "│» Next                ││○ Call Sam                                      ◌ ││                                │",
        "│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │",
        "│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │",
        "│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │",
        "│◔ Assigned            ││                                                  ││Reminder   none                 │",
        "│⧖ Upcoming            ││                                                  ││Importance high                 │",
        "│… Someday             ││                                                  ││Assignee   none                 │",
        "│✓ Completed          1││                                                  ││Defer      none                 │",
        "│≡ Tasks               ││                                                  ││Repeats    monthly on day 1     │",
        "│≡ Home               3││                                                  ││Steps      none                 │",
        "╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯",
        " ● daemon  ·  synced 12s ago  ·  all changes sent                                                             ",
        " a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 101, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 70, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 75, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 77, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 85, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | REVERSED,
        x: 65, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 66, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 68, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | REVERSED,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 75, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 96, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 74, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 77, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 74, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | CROSSED_OUT,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 68, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 92, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 92, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 92, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 23, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 92, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 24, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 76, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 49, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 33, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 54, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 61, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 75, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 80, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 83, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 88, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 91, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 99, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 109, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
