crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__one_due_date_for_several_tasks_shows_the_day_it_reads.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Reminder   none                 │"
"│⧖ Upcoming            ││                                                  ││Importance high                 │"
"│… Someday             ││                                                  ││Assignee   none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│≡ Tasks               ││                                                  ││Repeats    monthly on day 1     │"
"│≡ Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Due date for 2 tasks: next mon█  → Mon 28 Sep  Enter Done  Esc Cancel                                        "
