crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__planned_is_grouped_by_how_soon.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Planned                                                                             ● synced "
"╭ Lists ───────────────╮╭ Planned ──────────────────────────────────── 3/5 ╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││  Overdue                                         ││Title      Bins out             │"
"│» Next                ││○ Renew passport                  Sun 20          ││                                │"
"│★ Important          1││  Today                                           ││Status     open                 │"
"│▦ Planned            2││○ Dentist                          Today          ││List       Home                 │"
"│∞ All                3││  Tomorrow                                        ││Due        Fri 25 Sep 2026      │"
"│◔ Assigned            ││○ Bins out                      Tomorrow          ││(Tomorrow)                      │"
"│⧖ Upcoming            ││  This week                                       ││Reminder   none                 │"
"│… Someday             ││○ Book train                      Sun 27          ││Importance normal               │"
"│✓ Completed          1││  Later                                           ││Assignee   none                 │"
"│≡ Tasks               ││○ Pay rent                         Oct 1          ││Defer      none                 │"
"│≡ Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
