crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__prompts_take_over_the_hint_bar.snap
---
source: crates/tui/src/ui/tests.rs
expression: "format!(\"{}\\n{}\", last(&filtering), last(&confirming))"
---
" / milk█  Ctrl-s By meaning                                                                                   "
" Delete "Call Sam"?  y Delete  n Keep                                                                         "
