crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__sidebar_list_and_detail.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 1/4 ╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next                ││○ Call Sam                                      ◌ ││                                │"
"│★ Important          1││○ Water plants                                  ✗ ││Status     open                 │"
"│▦ Planned            2││✓ Ship blueprint                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ││                                                  ││Reminder   none                 │"
"│… Someday             ││                                                  ││Importance high                 │"
"│✓ Completed          1││                                                  ││Assignee   none                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     monthly on day 1     │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
