crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__steps_and_the_link_in_the_row_and_the_detail_pane.snap
---
source: crates/tui/src/ui/tests.rs
expression: "format!(\"{browsing}\\n{}\", terminal.backend())"
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Paint the room  1/3                             ││Title      Paint the room       │"
"│» Next                ││                                                  ││                                │"
"│★ Important          1││                                                  ││Status     open                 │"
"│▦ Planned            2││                                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        none                 │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ││                                                  ││Reminder   none                 │"
"│… Someday             ││                                                  ││Importance normal               │"
"│✓ Completed          1││                                                  ││Assignee   none                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     none                 │"
"│                      ││                                                  ││Steps      1 of 3 done          │"
"│                      ││                                                  ││           ✓ Buy paint          │"
"│                      ││                                                  ││           ○ Tape the edges     │"
"│                      ││                                                  ││           ○ Two coats          │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit field  Space Check step  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Hel"

" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Paint the room  1/3                             ││Title      Paint the room       │"
"│» Next                ││                                                  ││                                │"
"│★ Important          1││                                                  ││Status     open                 │"
"│▦ Planned            2││                                                  ││List       Home                 │"
"│∞ All                3││                                                  ││Due        none                 │"
"│◔ Assigned            ││                                                  ││Start      none                 │"
"│⧖ Upcoming            ││                                                  ││Reminder   none                 │"
"│… Someday             ││                                                  ││Importance normal               │"
"│✓ Completed          1││                                                  ││Assignee   none                 │"
"│≡ Tasks               ││                                                  ││Defer      none                 │"
"│≡ Home               3││                                                  ││Repeat     none                 │"
"│                      ││                                                  ││Steps      1 of 3 done          │"
"│                      ││                                                  ││           ✓ Buy paint          │"
"│                      ││                                                  ││           ○ Tape the edges     │"
"│                      ││                                                  ││           ○ Two coats          │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" New step:  Enter Done  Esc Cancel  ←/→ Move                                                                  "
