crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__syncing_before_the_first_sync_not_an_empty_list.snap
---
source: crates/tui/src/ui/tests.rs
expression: render(&app)
---
" ms-todo 9.9.9 · Tasks                                                                              ◌ syncing "
"╭ Lists ───────────────╮╭ Tasks ───────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││                                                  ││                                │"
"│» Next                ││                                                  ││                                │"
"│★ Important           ││                                                  ││                                │"
"│▦ Planned             ││                                                  ││                                │"
"│∞ All                 ││                                                  ││                                │"
"│◔ Assigned            ││                     Syncing…                     ││                                │"
"│⧖ Upcoming            ││                                                  ││                                │"
"│… Someday             ││                                                  ││                                │"
"│✓ Completed           ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"│                      ││                                                  ││                                │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  syncing…  ·  all changes sent                                                                   "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
