crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__task_list_markers_never_overlap.snap
---
source: crates/tui/src/ui/tests.rs
expression: "format!(\"{unicode}\\n{}\", render(&app))"
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 1/4 ╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻ ◷    ││Title      Pay rent             │"
"│» Next                ││○ Update the budget                Oct 1 ★ ↻      ││                                │"
"│★ Important          1││○ Water plants                     Oct 1   ↻      ││Status     open                 │"
"│▦ Planned            2││○ Call Sam                                   ◷    ││List       Home                 │"
"│∞ All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│◔ Assigned            ││                                                  ││Reminder   Wed 30 Sep 2026 09:00│"
"│⧖ Upcoming            ││                                                  ││Importance high                 │"
"│… Someday             ││                                                  ││Assignee   none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│≡ Tasks               ││                                                  ││Repeats    monthly on day 1     │"
"│≡ Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "

" ms-todo 9.9.9 · Home                                                                                + synced "
"╭ Lists ───────────────╮╭ Home ─────────────────────────────────────── 1/4 ╮╭ Detail ────────────────────────╮"
"│o My Day              ││[ ] Pay rent                       Oct 1 ! R @    ││Title      Pay rent             │"
"│> Next                ││[ ] Update the budget              Oct 1 ! R      ││                                │"
"│! Important          1││[ ] Water plants                   Oct 1   R      ││Status     open                 │"
"│# Planned            2││[ ] Call Sam                                 @    ││List       Home                 │"
"│* All                3││                                                  ││Due        Thu 1 Oct 2026       │"
"│w Assigned            ││                                                  ││Reminder   Wed 30 Sep 2026 09:00│"
"│u Upcoming            ││                                                  ││Importance high                 │"
"│s Someday             ││                                                  ││Assignee   none                 │"
"│x Completed          1││                                                  ││Defer      none                 │"
"│- Tasks               ││                                                  ││Repeats    monthly on day 1     │"
"│- Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" + daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" a Add  x Done  e Edit  d Delete  v Select  u Undo  / Filter  : Palette  r Sync  ? Help  q Quit  o Open link  "
