crates/tui/src/ui/snapshots/ms_todo_tui__ui__tests__the_add_modal_highlights_what_it_read_and_previews_the_task.snap
---
source: crates/tui/src/ui/tests.rs
expression: screen
---
" ms-todo 9.9.9 · Home                                                                                ● synced "
"╭ Lists ───────────────╮╭ Home ────────────────────────────────────────────╮╭ Detail ────────────────────────╮"
"│☼ My Day              ││○ Pay rent                         Oct 1 ★ ↻      ││Title      Pay rent             │"
"│» Next               ╭ Add task → Tasks ──────────────────────────────────────────────╮                     │"
"│★ Important          │ > Pay rent every 1st #Tasks p1 9am @bills +myday█              │open                 │"
"│▦ Planned            │ → Tasks · p1 · due Thu 1 Oct · every month on the 1st · remind │Home                 │"
"│∞ All                │ 09:00 · @bills · My Day                                        │Thu 1 Oct 2026       │"
"│◔ Assigned           │                                                                │none                 │"
"│⧖ Upcoming           │ Enter add · Tab complete · Ctrl-r literal · Esc cancel         │high                 │"
"│… Someday            ╰────────────────────────────────────────────────────────────────╯none                 │"
"│✓ Completed          1││                                                  ││Defer      none                 │"
"│≡ Tasks               ││                                                  ││Repeats    monthly on day 1     │"
"│≡ Home               3││                                                  ││Steps      none                 │"
"╰──────────────────────╯╰──────────────────────────────────────────────────╯╰────────────────────────────────╯"
" ● daemon  ·  synced 12s ago  ·  all changes sent                                                             "
" Enter Add  Tab Complete  Ctrl-r Literal  Esc Cancel                                                          "
